--- a/Public/css/stylesheet.css
+++ b/Public/css/stylesheet.css
@@ -1,3 +1,7 @@
+#primary-container {
+	padding-top: 1rem;
+}
+
 span[id*="-downloads"] .dl {
 	width: 195px;
 	margin-top:3px;
@@ -13,9 +17,6 @@ span[id*="-downloads"] .dl {
 	padding: 0.5em 0;
 }
 
-body {
-	padding-top: 70px;
-}
 .download {
 	text-align: center;
 }
@@ -25,17 +26,9 @@ body {
 }
 
 /* FROM TEXT.CSS */
-.hr {
-	display: block;
-	margin: 0.5em 0 0.5em 0;
-	border-style: ridge;
-	border-width: 2px;
-}
 .footer {
 	text-align: center;
-	font-family: arial, sans-serif;
 	font-size: 12px;
-	margin: 1em;
 }
 /* Outdated browser warning look */
 .update {
@@ -52,7 +45,7 @@ body {
 .rec-requirements{
 }
 p, tr, td{
-	text-align: center;
+	/*text-align: center*/;
 }
 .note-req {
 	background-color: #DFE5E9;
